# django-project-1

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml
auth_app/: admin.py  urls.py  utils.py
auth_app/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_options_profile_username_and_more.py  0004_alter_profile_user.py  0005_profile_isactive_profile_verification_code.py  0006_profile_forget_password_profile_is_bloked_and_more.py  0007_remove_profile_verification_code.py  0008_verificationcode.py  0009_profile_expires_at_profile_verification_code.py  0010_alter_profile_dob.py  0011_settings.py
auth_app/models/: Profile.py  Settings.py  User.py  VerificationCode.py  __init__.py
auth_app/serializers/: __init__.py  profile_serializer.py  settings_serializer.py
auth_app/utils/: __init__.py  generateCode.py  google_auth_helper.py  sendEmail.py
auth_app/views/: __init__.py  enable2FA.py  forgetPassword.py  profile.py  resend_verification.py  reset_password.py  settingsView.py  signin.py  signup.py  verification.py
auth_app/views/auth/: google_auth.py  signin.py  signup.py
auth_app/views/password/: forget_password.py  reset_password.py  verify_forget_password.py
auth_app/views/user/: profile.py  settings.py
auth_app/views/verification/: resend_verification.py  (+2 more)
backend/: settings.py  urls.py
products_app/: urls.py
products_app/migrations/: 0001_initial.py
products_app/models/: product_model.py
products_app/serializers/: product_serializer.py
products_app/views/: __init__.py  product_create.py  product_mixing_view.py  product_view.py
